<resources>
    <string name="app_name">LoginActivity</string>
    <string name="main_welcome">Вход</string>
    <string name="main_greeting_guest">Добро пожаловать!</string>
    <string name="main_greeting_title">Выполните вход</string>
    <string name="main_greeting_title_second">или зарегестрируйтесь</string>
    <string name="main_login_mail">Введите вашу почту</string>
    <string name="main_login_password">Введите пароль</string>
    <string name="main_login_in">Войти</string>
    <string name="main_login_forgot">Забыл пароль?</string>
    <string name="main_forgot_click">Нажми сюда</string>
</resources>