<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/main_welcome"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_activity" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100sp"
        android:text="@string/main_greeting_guest"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/main_activity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_p_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greeting_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_greeting_title_second"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_p_one" />

    <EditText
        android:id="@+id/main_login_mail"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/round_two"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/main_login_mail"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_login_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_two"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/main_login_password"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_login_mail" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="330dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round"
        android:text="@string/main_login_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintCircleRadius="10dp"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_login_password" />


    <TextView
        android:id="@+id/main_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_login_forgot"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSend"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_forgot_click"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/active_btn"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/main_forgot"
        app:layout_constraintTop_toTopOf="@+id/main_forgot" />


</androidx.constraintlayout.widget.ConstraintLayout>